--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #171717;
-  --foreground: #ffffff;
+  --background: #160b15;
+  --foreground: #ffd524;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -21,8 +21,8 @@ body {
   height: 100vh;
 }
 
-/* @layer utilities {
+@layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-} */
+}
